# loki-mode

./: .mcp.json  .npmignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER_README.md  Dockerfile  Dockerfile.sandbox  README.md  SKILL.md  VERSION  action.yml  docker-compose.yml  index.html  package.json
.claude/: settings.json
.github/DISCUSSION_TEMPLATE/: q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: config.yml  enterprise.md
.github/workflows/: integrity-audit.yml  pages.yml  release.yml  test.yml  wiki-sync.yml
.loki/audit/: integrity-audit-v5.52.0.md
.loki/hooks/: quality-gate.sh  session-init.sh  store-episode.sh  track-metrics.sh  validate-bash.sh
.loki/smoke/: smoke-test-v5.52.1.md
api/: README.md
api-examples/: README.md  bash-api.sh  deno-api.ts  node-api.js  python-api.py
autonomy/: CONSTITUTION.md  api-server.js  app-runner.sh  checklist-verify.py  completion-council.sh  council-v2.sh  loki  notify.sh  prd-checklist.sh  run.sh  sandbox.sh  serve.sh
autonomy/hooks/: quality-gate.sh  track-metrics.sh  validate-bash.sh
benchmarks/: prepare-submission.sh  run-benchmarks.sh
benchmarks/submission-template/: README.md
blog/: index.html
blog/js/: main.js
dashboard/: __init__.py  audit.py  auth.py  control.py  registry.py  secrets.py  server.py  telemetry.py
dashboard-ui/: FEATURE-MATRIX.md  README.md  index.html  index.js
dashboard-ui/components/: loki-analytics.js  loki-api-keys.js  loki-app-status.js  loki-audit-viewer.js  loki-checklist-viewer.js  loki-checkpoint-viewer.js  loki-context-tracker.js  loki-cost-dashboard.js  loki-council-dashboard.js  loki-learning-dashboard.js  loki-log-stream.js  loki-memory-browser.js  loki-notification-center.js  loki-overview.js  loki-quality-gates.js  loki-rarv-timeline.js  loki-run-manager.js  loki-session-control.js  loki-task-board.js  loki-tenant-switcher.js
dashboard-ui/core/: loki-api-client.js  loki-theme.js  loki-unified-styles.js
dashboard-ui/scripts/: build-standalone.js
dashboard-ui/tests/: feature-parity.test.js  loki-learning-dashboard.test.js
dashboard-ui/types/: index.d.ts
dashboard/static/: index.html
demo/: record-full-demo.sh  run-demo-auto.sh  run-demo.sh  vhs-tape.tape
deploy/docker-compose/: .env.example  README.md  docker-compose.yml  otel-config.yaml
deploy/helm/: README.md
deploy/helm/autonomi/: .helmignore  (+4 more)
docs/: COMPARISON.md  COMPETITIVE-ANALYSIS.md  INSTALLATION.md  alternative-installations.md  dashboard-guide.md  loki-mode-presentation.pptx  show-hn-post.md
docs/certification/: README.md  answer-key.md  certification-exam.md
docs/enterprise/: migration.md  sdk-guide.md  security.md
events/: emit.sh
integrations/openclaw/: README.md  SKILL.md
mcp/: __init__.py  resources.py  server.py  tools.py
memory/: engine.py  retrieval.py  storage.py  vector_index.py
providers/: gemini.sh
references/: agent-types.md  agents.md  quality-control.md  sdlc-phases.md  tool-orchestration.md
scripts/: export-to-vibe-kanban.sh  loki-wrapper.sh  vibe-sync-watcher.sh
sdk/python/: README.md  pyproject.toml
sdk/python/loki_mode_sdk/: __init__.py  auth.py  client.py  events.py  sessions.py  tasks.py  types.py
sdk/python/tests/: test_client.py
sdk/typescript/: README.md  package.json
skills/: 00-index.md  agents.md  compound-learning.md  model-selection.md  parallel-workflows.md  quality-gates.md  troubleshooting.md
src/audit/: compliance.js  index.js  log.js  residency.js  subscriber.js
src/integrations/: adapter.js
src/observability/: index.js  metrics.js  otel-bridge.js  otel.js  spans.js
src/plugins/: agent-plugin.js  gate-plugin.js  index.js  integration-plugin.js  loader.js  mcp-plugin.js  validator.js
src/policies/: approval.js  check.js  cost.js  engine.js  index.js  types.js
src/protocols/: mcp-client-manager.js  mcp-client.js  mcp-server.js
swarm/: adjuster.py  bft.py  calibration.py  classifier.py  composer.py  performance.py  sycophancy.py
tests/: run-all-tests.sh  run-shellcheck.sh  test-agent-timeout.sh  test-api-server.sh  test-bootstrap.sh  test-circuit-breaker.sh  test-hooks.sh  test-human-input-directive.sh  test-json-prd.sh  test-mcp-server.sh  test-rate-limiting.sh  test-state-recovery.sh  test-task-queue.sh  test-vibe-kanban-export.sh  test-wrapper.sh  test_adjuster.py  test_calibration.py  test_classifier.py  test_composer.py  test_performance.py  test_sycophancy.py
tests/audit/: compliance.test.js  log.test.js  residency.test.js  subscriber.test.js
tests/integrations/: adapter.test.js  linear-client.test.js  linear-config.test.js  linear-sync.test.js
tests/observability/: metrics.test.js  otel-bridge.test.js  otel.test.js  spans.test.js
tests/plugins/: gate-plugin.test.js  integration-plugin.test.js  loader.test.js  mcp-plugin.test.js  validator.test.js
tests/policies/: approval.test.js  check.test.js  cost.test.js  engine.test.js  types.test.js
tests/protocols/: auth.test.js  mcp-client-manager.test.js  mcp-client.test.js  mcp-server.test.js  tools.test.js  transport.test.js
the_app/extension/: .gitignore  package.json  tsconfig.json
the_app/sdk/: .gitignore  README.md  pyproject.toml
the_app/sdk/src/autonomi/: __init__.py  agent.py  interrupt.py  session.py  tool.py  types.py
the_app/sdk/src/autonomi/guardrails/: __init__.py  base.py  builtin.py
the_app/sdk/src/autonomi/memory/: __init__.py  base.py  sqlite.py
the_app/sdk/src/autonomi/orchestration/: __init__.py  orchestrator.py  router.py
the_app/sdk/src/autonomi/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
the_app/sdk/src/autonomi/telemetry/: __init__.py  telemetry.py  tracker.py
the_app/sdk/src/autonomi/utils/: __init__.py
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
wiki/: API-Reference.md  Audit-Logging.md  CLI-Reference.md  Dashboard.md  Enterprise-Features.md  Enterprise-Setup.md  Enterprise.md  Environment-Variables.md  Getting-Started.md  Home.md  Network-Security.md  Sandbox-Mode.md  Security.md  Troubleshooting.md  _Sidebar.md
(+113 files in other folders)
