[project]
name = "loki-mode-sdk"
version = "0.1.0"
description = "Python SDK for Loki Mode - autonomous multi-agent development platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Lokesh Mure", email = "lokesh@autonomi.dev"}
]
keywords = [
    "loki-mode", "autonomous", "sdk",
    "claude", "claude-code", "anthropic",
    "ai", "ai-agents", "multi-agent", "agent-orchestration",
    "swarm-intelligence", "swarm",
    "mcp", "model-context-protocol",
    "llm", "large-language-model",
    "gpt", "chatgpt",
    "automation", "workflow", "orchestration",
    "cli", "developer-tools", "devtools",
    "coding-assistant", "code-generation",
    "enterprise", "vector-database", "embeddings",
    "machine-learning", "neural-network",
    "hive-mind", "distributed-systems", "consensus", "self-learning",
    "openai", "codex", "gemini", "gemini-cli",
    "opencode", "ollama", "mistral", "openclaw",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/asklokesh/loki-mode"
Repository = "https://github.com/asklokesh/loki-mode"
Documentation = "https://github.com/asklokesh/loki-mode/wiki"
"Bug Tracker" = "https://github.com/asklokesh/loki-mode/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loki_mode_sdk*"]
